header and font

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>אתר הבית של צימר ברגר</title>
 </head>
 <body>
+    <h1>Hello</h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="https://www.google.com/maps/place/%D7%94%D7%A8%D7%95%D7%AA%D7%9D+11,+%D7%97%D7%A6%D7%95%D7%A8+%D7%94%D7%92%D7%9C%D7%99%D7%9C%D7%99%D7%AA%E2%80%AD/@32.9839163,35.5445721,17z/data=!3m1!4b1!4m5!3m4!1s0x151c218cdf7cf5f5:0x510b70274021a9f3!8m2!3d32.9839163!4d35.5423834" target="_blank">מפת הגעה</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
