--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+
+    <script src="/main.js"></script>
     <title>אתר הבית של צימר ברגר</title>
 </head>
 <body>
